@@ -7,14 +7,14 @@
 <sect1 id="rni18">
     <title>Internationalization</title>
 
-    <!-- Translators: number of languages might change before final date -->
+        <!-- Translators: number of languages might change before final date -->
     <para>
     Thanks to members of the worldwide <ulink
     url="http://developer.gnome.org/projects/gtp/">GNOME Translation
     Project</ulink>, GNOME &version; offers support for 50 languages (at least 80 percent of
     strings translated), including the user and administration manuals for many languages.
 
-<!--
+    <!--
 	<figure id="rni18screenshot"> 
         <title>GNOME in Chinese Characters</title> 
         <screenshot> 
@@ -35,74 +35,70 @@
 
   <para>Supported languages:
  
-    <!-- some languages are currently under quota, but they will be removed prior 
+        <!-- some languages are currently under quota, but they will be removed prior 
 	 to publication: they are included so translators don't have to update when we know final -->
-    <!-- Information is from http://l10n.gnome.org/releases/gnome-2-20 -->
-    <!-- po-locations and gtk+-properties are not included in the count: this brought 
+        <!-- Information is from http://l10n.gnome.org/releases/gnome-2-20 -->
+        <!-- po-locations and gtk+-properties are not included in the count: this brought 
 	 Xhosa much closer to supported status; also, language which
 	 don't end up supported will be removed prior to release [there is
 	 no harm in having more simple messages for translation]. Danilo -->
 
   <itemizedlist>
-      <!-- 89.75% --><listitem><para>Albanian</para></listitem>
-      <!-- xx.xx% --><listitem><para>Arabic</para></listitem>
-      <!-- 92.89% --><listitem><para>Basque</para></listitem>
-      <!-- 83.77% --><listitem><para>Bengali</para></listitem>
-      <!-- 95.63% --><listitem><para>Brazilian Portuguese</para></listitem>
-      <!-- 99.93% --><listitem><para>Bulgarian</para></listitem>
-      <!-- 99.80% --><listitem><para>Catalan</para></listitem>
-      <!-- 95.77% --><listitem><para>Chinese (Hong Kong)</para></listitem>
-      <!-- 99.08% --><listitem><para>Chinese (Taiwan)</para></listitem>
-      <!-- 95.77% --><listitem><para>Chinese Simplified</para></listitem>
-      <!-- 94.61% --><listitem><para>Czech</para></listitem>
-      <!-- 86.86% --><listitem><para>Danish</para></listitem>
-      <!-- 99.93% --><listitem><para>Dutch</para></listitem>
-      <!-- 99.32% --><listitem><para>Dzongkha</para></listitem>
-      <!-- 100.0% --><listitem><para>English</para></listitem>
-      <!-- 83.29% --><listitem><para>Estonian</para></listitem>
-      <!-- 99.93% --><listitem><para>Finnish</para></listitem>
-      <!-- 99.75% --><listitem><para>French</para></listitem>
-      <!-- 96.33% --><listitem><para>Galician</para></listitem>
-      <!-- 99.93% --><listitem><para>German</para></listitem>
-      <!-- 98.78% --><listitem><para>Greek</para></listitem>
-      <!-- 100.0% --><listitem><para>Gujarati</para></listitem>
-      <!-- 61.49% --><listitem><para>Hebrew</para></listitem>
-      <!-- 96.46% --><listitem><para>Hindi</para></listitem>
-      <!-- 97.67% --><listitem><para>Hungarian</para></listitem>
-      <!-- 88.87% --><listitem><para>Indian Bengali</para></listitem>
-      <!-- 95.19% --><listitem><para>Indonesian</para></listitem>
-      <!-- 91.92% --><listitem><para>Italian</para></listitem>
-      <!-- 99.93% --><listitem><para>Japanese</para></listitem>
-      <!-- 99.32% --><listitem><para>Korean</para></listitem>
-      <!-- 95.71% --><listitem><para>Latvian</para></listitem>
-      <!-- 99.93% --><listitem><para>Lithuanian</para></listitem>
-      <!-- 100.0% --><listitem><para>Macedonian</para></listitem>
-      <!-- 82.73% --><listitem><para>Malayalam</para></listitem>
-      <!-- 82.39% --><listitem><para>Nepali</para></listitem>
-      <!-- 98.08% --><listitem><para>Norwegian Bookmal</para></listitem>
-      <!-- 76.56% --><listitem><para>Norwegian Nynorsk</para></listitem>
-      <!-- 67.33% --><listitem><para>Oriya</para></listitem>
-      <!-- 77.79% --><listitem><para>Persian</para></listitem>
-      <!-- 87.67% --><listitem><para>Polish</para></listitem>
-      <!-- 99.93% --><listitem><para>Portuguese</para></listitem>
-      <!-- 97.34% --><listitem><para>Punjabi</para></listitem>
-      <!-- 90.73% --><listitem><para>Romanian</para></listitem>
-      <!-- 99.93% --><listitem><para>Russian</para></listitem>
-      <!-- 94.32% --><listitem><para>Serbian</para></listitem>
-      <!-- 61.78% --><listitem><para>Slovak</para></listitem>
-      <!-- 83.22% --><listitem><para>Slovenian</para></listitem>
-      <!-- 99.93% --><listitem><para>Spanish</para></listitem>
-      <!-- 99.93% --><listitem><para>Swedish</para></listitem>
-      <!-- 93.82% --><listitem><para>Tamil</para></listitem>
-      <!-- 83.81% --><listitem><para>Thai</para></listitem>
-      <!-- 92.24% --><listitem><para>Turkish</para></listitem>
-      <!-- 99.92% --><listitem><para>Ukrainian</para></listitem>
-      <!-- 99.88% --><listitem><para>Vietnamese</para></listitem>
-      <!-- 95.77% --><listitem><para>Welsh</para></listitem>
+    <!-- 77% --><listitem><para>Albanian</para></listitem>
+    <!-- 92% --><listitem><para>Arabic</para></listitem>
+    <!-- 85% --><listitem><para>Basque</para></listitem>
+    <!-- 83% --><listitem><para>Bengali (India)</para></listitem>
+    <!-- 98% --><listitem><para>Bulgarian</para></listitem>
+    <!-- 99% --><listitem><para>Brazilian Portuguese</para></listitem>
+    <!-- 95% --><listitem><para>Catalan</para></listitem>
+    <!-- 90% --><listitem><para>Chinese (China)</para></listitem>
+    <!-- 89% --><listitem><para>Chinese (Taiwan)</para></listitem>
+    <!-- 89% --><listitem><para>Chinese (Hong Kong)</para></listitem>
+    <!-- 83% --><listitem><para>Czech</para></listitem>
+    <!-- 99% --><listitem><para>Danish</para></listitem>
+    <!-- 92% --><listitem><para>Dzongkha</para></listitem>
+    <!-- 94% --><listitem><para>Dutch</para></listitem>
+    <!-- 100% --><listitem><para>English</para></listitem>
+    <!-- 86% --><listitem><para>Estonian</para></listitem>
+    <!-- 99% --><listitem><para>Finnish</para></listitem>
+    <!-- 99% --><listitem><para>French</para></listitem>
+    <!-- 90% --><listitem><para>Galician</para></listitem>
+    <!-- 99% --><listitem><para>German</para></listitem>
+    <!-- 90% --><listitem><para>Greek</para></listitem>
+    <!-- 97% --><listitem><para>Gujarati</para></listitem>
+    <!-- 84% --><listitem><para>Hindi</para></listitem>
+    <!-- 97% --><listitem><para>Hungarian</para></listitem>
+    <!-- 79% --><listitem><para>Indonesian</para></listitem>
+    <!-- 93% --><listitem><para>Italian</para></listitem>
+    <!-- 98% --><listitem><para>Japanese</para></listitem>
+    <!-- 93% --><listitem><para>Korean</para></listitem>
+    <!-- 88% --><listitem><para>Latvian</para></listitem>
+    <!-- 95% --><listitem><para>Lithuanian</para></listitem>
+    <!-- 100% --><listitem><para>Macedonian</para></listitem>
+    <!-- 81% --><listitem><para>Malayalam</para></listitem>
+    <!-- unlikely to meet 80% - maybe remove --><listitem><para>Nepali</para></listitem>
+    <!-- 95% --><listitem><para>Norwegian Bokmål</para></listitem>
+    <!-- unlikely to meet 80% - maybe remove --><listitem><para>Persian</para></listitem>
+    <!-- 94% --><listitem><para>Polish</para></listitem>
+    <!-- 99% --><listitem><para>Portuguese</para></listitem>
+    <!-- 95% --><listitem><para>Punjabi</para></listitem>
+    <!-- 77% --><listitem><para>Romanian</para></listitem>
+    <!-- 95% --><listitem><para>Russian</para></listitem>
+    <!-- 88% --><listitem><para>Serbian</para></listitem>
+    <!-- 88% TODO: Remove this as a duplicate? --><listitem><para>Serbian Latin</para></listitem>
+    <!-- 100% --><listitem><para>Spanish</para></listitem>
+    <!-- 84% --><listitem><para>Slovenian</para></listitem>
+    <!-- 99% --><listitem><para>Swedish</para></listitem>
+    <!-- 95% --><listitem><para>Tamil</para></listitem>
+    <!-- 87% --><listitem><para>Thai</para></listitem>
+    <!-- 82% --><listitem><para>Turkish</para></listitem>
+    <!-- 95% --><listitem><para>Ukrainian</para></listitem>
+    <!-- 99% --><listitem><para>Vietnamese</para></listitem>
+    <!-- 82% --><listitem><para>Welsh</para></listitem>
     </itemizedlist>
   </para>
 
-  <para>TODO: Update this text: Note that Dzongkha, Hebrew, Indian Bengali, Latvian, Malayalam, Norwegian Nynorsk, 
+  <para>TODO: Update this text, or remove it if we don't: Note that Dzongkha, Hebrew, Indian Bengali, Latvian, Malayalam, Norwegian Nynorsk, 
     Oriya, Slovenian and Tamil are new supported languages in GNOME &version;,
     thanks to the hard work of their translators. Also noteworthy are that British
     and Canadian English are supported.</para>
