@@ -1,5 +1,14 @@
 2007-09-12  Murray Cumming  <murrayc@murrayc.com>
 
+	* docbook/C/rni18n.xml: Updated the list of languages from 
+	http://l10n.gnome.org/releases/gnome-2-20.xml, adding Nepali 
+	and Persian in case they hit 80%, and adding English. The number 
+	still seems to be 50 languages (less than 54 in 2.16).
+	The summary text must still be updated or removed. Note that 
+	removals do not disturb the release-notes translators.
+
+2007-09-12  Murray Cumming  <murrayc@murrayc.com>
+
 	* docbook/C/release-notes.xml:
 	* docbook/C/rni18n.xml:
 	* docbook/C/rnusers.xml: Partially update the i18n section.
